# starter-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  start.bat
src/starter/: main.py
