[project]
name = "starter"
version = "0.0.1"
description = "A simple starter template for Python projects."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
starter = "starter.main:main"

[build-system]
requires = ["uv_build>=0.5.0"]
build-backend = "uv_build"

[dependency-groups]
dev= [
    "commitizen>=4.13.3",
    "poethepoet>=0.40.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
    "ty>=0.0.14",
]

[tool.poe.tasks]
setup = [
    { cmd = "pre-commit install" },
    { cmd = "pre-commit install --hook-type commit-msg" }
]
dev = "python -m starter.main"
build = "uv build"
format = "ruff format src"
lint = "ruff check src --fix"
type = "ty check"
check = ["format", "lint", "type"]
tag = "cz bump"

[tool.ty.src]
include = ["src"]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
bump_message = "chore: bump v$current_version → v$new_version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "RUF", # ruff
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT",  # flake-pytest-style
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
extend-ignore = [
    "RUF005",
    "RUF012",
    "RUF001", # 忽略字符串中的全角字符歧义
    "RUF002", # 忽略文档字符串中的全角字符歧义
    "RUF003", # 忽略注释中的全角字符歧义
]
unfixable = ["F401"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
